United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7123108 C1: assert(if_state != NULL) failed: states do not match up
7123108 : C1: assert(if_state != NULL) failed: states do not match up

Details
Type:
Bug
Submit Date:
2011-12-20
Status:
Closed
Updated Date:
2013-04-24
Project Name:
JDK
Resolved Date:
2012-03-29
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs23
Fixed Versions:
hs23

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
jittester test
jittester/12-19-2011/6008
test in attachment 
crash VM with
;; Using jvm: "/export/local/common/jdk/baseline/solaris-i586/jre/lib/i386/client/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/jprt/P1/230539.kvn/source/src/share/vm/c1/c1_Optimizer.cpp:130), pid=18347, tid=7
#  assert(if_state != NULL) failed: states do not match up
#
# JRE version: 7.0-b147
# Java VM: Java HotSpot(TM) Client VM (23.0-b08-internal-201112142305.kvn.7116452-fastdebug compiled mode, sharing solaris-x86 )
# Core dump written. Default location: /export/local/57025.JDK7.NIGHTLY.VM_solaris-i586_jittester_client_comp_testlist/results/wrk_dir1324363250135/core or core.18347
#
# If you would like to submit a bug report, please visit:
#   http://bugreport.sun.com/bugreport/crash.jsp
#
hs_err with stackstrace
;; Using jvm: "/export/local/common/jdk/baseline/solaris-i586/jre/lib/i386/client/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/jprt/P1/230539.kvn/source/src/share/vm/c1/c1_Optimizer.cpp:130), pid=18347, tid=7
#  assert(if_state != NULL) failed: states do not match up
#
# JRE version: 7.0-b147
# Java VM: Java HotSpot(TM) Client VM (23.0-b08-internal-201112142305.kvn.7116452-fastdebug compiled mode, sharing solaris-x86 )
# Core dump written. Default location: /export/local/57025.JDK7.NIGHTLY.VM_solaris-i586_jittester_client_comp_testlist/results/wrk_dir1324363250135/core or core.18347
#
# If you would like to submit a bug report, please visit:
#   http://bugreport.sun.com/bugreport/crash.jsp
#

---------------  T H R E A D  ---------------

Current thread (0x0813a800):  JavaThread "C1 CompilerThread0" daemon [_thread_in_native, id=7, stack(0xfa73c000,0xfa7bc000)]

Stack: [0xfa73c000,0xfa7bc000],  sp=0xfa7ba8d0,  free space=506k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0x16ecad4]  void VMError::report(outputStream*)+0x904;;  void VMError::report(outputStream*)+0x904
V  [libjvm.so+0x16edc89]  void VMError::report_and_die()+0x56d;;  void VMError::report_and_die()+0x56d
V  [libjvm.so+0x832312]  void report_vm_error(const char*,int,const char*,const char*)+0x53a;;  void report_vm_error(const char*,int,const char*,const char*)+0x53a
V  [libjvm.so+0x54021a]  void CE_Eliminator::block_do(BlockBegin*)+0xbaa;;  void CE_Eliminator::block_do(BlockBegin*)+0xbaa
V  [libjvm.so+0x3fb03c]  void BlockBegin::iterate_preorder(boolArray&,BlockClosure*)+0x2f0;;  void BlockBegin::iterate_preorder(boolArray&,BlockClosure*)+0x2f0
V  [libjvm.so+0x3fb0d9]  void BlockBegin::iterate_preorder(boolArray&,BlockClosure*)+0x38d;;  void BlockBegin::iterate_preorder(boolArray&,BlockClosure*)+0x38d
V  [libjvm.so+0x3fb969]  void BlockBegin::iterate_preorder(BlockClosure*)+0x171;;  void BlockBegin::iterate_preorder(BlockClosure*)+0x171
V  [libjvm.so+0x3f21e5]  void IR::iterate_preorder(BlockClosure*)+0x2d;;  void IR::iterate_preorder(BlockClosure*)+0x2d
V  [libjvm.so+0x540c81]  void Optimizer::eliminate_conditional_expressions()+0x41;;  void Optimizer::eliminate_conditional_expressions()+0x41
V  [libjvm.so+0x3e9869]  void IR::optimize()+0x81;;  void IR::optimize()+0x81
V  [libjvm.so+0x38f592]  int Compilation::compile_java_method()+0x44e;;  int Compilation::compile_java_method()+0x44e
V  [libjvm.so+0x39167f]  Compilation::Compilation(AbstractCompiler*,ciEnv*,ciMethod*,int,BufferBlob*)+0x427;;  Compilation::Compilation(AbstractCompiler*,ciEnv*,ciMethod*,int,BufferBlob*)+0x427
V  [libjvm.so+0x3938ac]  void Compiler::compile_method(ciEnv*,ciMethod*,int)+0x23c;;  void Compiler::compile_method(ciEnv*,ciMethod*,int)+0x23c
V  [libjvm.so+0x71894f]  void CompileBroker::invoke_compiler_on_method(CompileTask*)+0x146f;;  void CompileBroker::invoke_compiler_on_method(CompileTask*)+0x146f
V  [libjvm.so+0x716920]  void CompileBroker::compiler_thread_loop()+0xdc8;;  void CompileBroker::compiler_thread_loop()+0xdc8
V  [libjvm.so+0x16287fa]  void compiler_thread_entry(JavaThread*,Thread*)+0x2e;;  void compiler_thread_entry(JavaThread*,Thread*)+0x2e
V  [libjvm.so+0x161ac1b]  void JavaThread::thread_main_inner()+0x4bb;;  void JavaThread::thread_main_inner()+0x4bb
V  [libjvm.so+0x161a589]  void JavaThread::run()+0x619;;  void JavaThread::run()+0x619
V  [libjvm.so+0x139c493]  java_start+0x6fb;;  java_start+0x6fb
C  [libc.so.1+0xc39bc]  _thrp_setup+0x9d;;  _thrp_setup+0x9d
C  [libc.so.1+0xc3c60]  _lwp_start+0x0;;  _lwp_start+0x0

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/e5ac210043cd
                                     
2012-03-22
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/e5ac210043cd
                                     
2011-12-22
EVALUATION

7114106 fixed CEE: the state of the if that is used is adjusted so that it is at the same inline level as the common successor state. Similarly, if the inline level of the common successor's state is higher than the one of the if, the state of the common successor that is used must be adjusted so both states are at the same inline level.
                                     
2011-12-20



Hardware and Software, Engineered to Work Together