7123108: C1: assert(if_state != NULL) failed: states do not match up

In CEE, ensure if and common successor state are at the same inline level

Reviewed-by: never